[metadata]
name = css_checker
author = Michael S. P. Kelley
author_email = msk@astro.umd.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = 
description = Find comets and asteroids in Catalina Sky Survey data.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
  sbsearch>=2.0


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
    testing.postgresql
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "css_checker" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  css_checker/__init*
  css_checker/conftest.py
  css_checker/*setup_package*
  css_checker/tests/*
  css_checker/*/tests/*
  css_checker/extern/*
  css_checker/version*
  */css_checker/__init*
  */css_checker/conftest.py
  */css_checker/*setup_package*
  */css_checker/tests/*
  */css_checker/*/tests/*
  */css_checker/extern/*
  */css_checker/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
